--- a/Waiter/views/admin/post-form.twig
+++ b/Waiter/views/admin/post-form.twig
@@ -3,6 +3,7 @@
 {% block form_header %}
     <input type="hidden" id="post_author" name="post_author" value="{{ user.id }}">
     <input type="hidden" id="featured_image" name="featured_image">
+    <input type="hidden" id="topic" name="topic">
     <input type="hidden" id="post_status" name="post_status" value="publish">
     <input type="hidden" id="post_date" name="post_date" value="">
     <input type="hidden" id="post_type" name="post_type" value="post">
