--- a/Waiter/views/admin/connect.twig
+++ b/Waiter/views/admin/connect.twig
@@ -87,37 +87,37 @@
                 <p>Service check is not running</p>
             </div>
         </div>
-        <div class="vs-panel row field-container">
+        <div id="connect-params" class="vs-panel row field-container">
             <div id="title" class="col-sm-12">
                 <h1>Vacation Soup HQ Settings</h1>
                 <p>You should not change these values unless advised to do so by a member of the Vacation Soup team.</p>
                 <div class="field">
                     <label for="kitchen_host">
-                        Kitchen Host
+                        Kitchen
                     </label>
                     <input type="text" class="persist" name="SoupWaiter.kitchen_host" id="kitchen_host" value="{{ soup.kitchen_host }}"/>
                 </div>
                 <div class="field">
                     <label for="kitchen_user">
-                        Kitchen Username
+                        Username
                     </label>
                     <input type="text" class="persist" name="SoupWaiter.kitchen_user" id="kitchen_user" value="{{ soup.kitchen_user }}"/>
                 </div>
                 <div class="field">
                     <label for="kitchen_auth_api">
-                        Kitchen Auth
+                        Auth API
                     </label>
                     <input type="text" class="persist" name="SoupWaiter.kitchen_jwt_api" id="kitchen_auth_api" value="{{ soup.kitchen_jwt_api }}"/>
                 </div>
                 <div class="field">
                     <label for="kitchen_api">
-                        Kitchen Api
+                        Kitchen API
                     </label>
                     <input type="text" class="persist" name="SoupWaiter.kitchen_api" id="kitchen_api" value="{{ soup.kitchen_api }}"/>
                 </div>
                 <div class="field">
                     <label for="social_api">
-                        Social Api
+                        Social API
                     </label>
                     <input type="text" class="persist" name="SoupWaiter.social_api" id="social_api" value="{{ soup.social_api }}"/>
                 </div>
