Minor checkservice enhancement, removed ? while checking

--- a/Waiter/views/admin/connect.twig
+++ b/Waiter/views/admin/connect.twig
@@ -10,8 +10,7 @@
 
                     jQuery(this).addClass("checking").removeClass("ok nok")
                         .find('I')
-                        .addClass('fa-question')
-                        .removeClass('fa-check fa-chain-broken');
+                        .removeClass('fa-check fa-chain-broken fa-question');
                     var ServiceAjaxCall = {
                         type: "post",
                         dataType: "json",
