--- a/Waiter/views/admin/create.twig
+++ b/Waiter/views/admin/create.twig
@@ -20,7 +20,7 @@
             type: "get",
             dataType: "json",
             context: this,
-            url: '{{ soup.kitchen_api~'/motd/' }}',
+            url: '{{ soup.kitchen_host~'/'~soup.kitchen_api~'/motd/' }}',
             data: {
                 per_page: 1,
                 page: page
@@ -56,7 +56,7 @@
             type: "get",
             dataType: "json",
             context: this,
-            url: '{{ soup.kitchen_api~'/topic/' }}',
+            url: '{{ soup.kitchen_host~'/'~soup.kitchen_api~'/topic/' }}',
             data: {
                 exclude: {{ recent_topics|json_encode }}
             }
@@ -79,7 +79,7 @@
                     type: "get",
                     dataType: "json",
                     context: this,
-                    url: '{{ soup.kitchen_api~'/tags/' }}',
+                    url: '{{ soup.kitchen_host~'/'~soup.kitchen_api~'/tags/' }}',
                     data: {
                         include: k_tags.sort(),
                         per_page: 100
