--- a/css/vs-admin.css
+++ b/css/vs-admin.css
@@ -430,4 +430,11 @@ DIV.social-container.currently-editing DIV.field-container INPUT
 .servicecheck.nok I {
     color: rgba(200, 0, 0, 1.0);
 }
+#alter-destination {
+    font-size: inherit;
+    height: inherit;
+    background: inherit;
+    background-color: rgba(255,255,255,0.3);
+    vertical-align: inherit;
+}
 
